<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FertighausWeiss</string>

    <string name="drawer_open">Menü öffnen</string>
    <string name="drawer_close">Menü schließen</string>

    <string name="label_send_button">Senden</string>
    <string name="label_menu_gallery">Häusergalerie</string>
    <string name="label_menu_news">News / Aktionen</string>
    <string name="label_menu_catalog">Kataloge</string>
    <string name="label_menu_panorama">360\u00B0</string>
    <string name="label_menu_augmented_reality">Augmented Reality</string>
    <string name="label_menu_map">Landkarte</string>
    <string name="label_menu_info">Über</string>

    <string name="label_title_request_form">Hier können Sie direkt unseren Katalog oder den Musterhaus-AR-Code kostenlos bestellen:</string>
    <string name="hint_name">Vorname</string>
    <string name="hint_surname">Nachname</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Telefon</string>
    <string name="label_check_ar_code_house">Musterhaus-AR-Code bestellen</string>
    <string name="label_check_catalog">Katalog bestelen</string>
    <string name="label_menu">Menü</string>
    <string name="label_contact">Contact</string>


</resources>
